targets file, nullability disabled, some basic  stuff

--- a/dyno-gui/Components/Pages/Weather.razor
+++ b/dyno-gui/Components/Pages/Weather.razor
@@ -1,7 +1,7 @@
 ﻿@page "/weather"
 @attribute [StreamRendering]
 
-<PageTitle>Weather</PageTitle>
+<title>Weather</title>
 
 <h1>Weather</h1>
 
@@ -37,7 +37,7 @@ else
 }
 
 @code {
-    private WeatherForecast[]? forecasts;
+    private WeatherForecast[] forecasts = new WeatherForecast[0];
 
     protected override async Task OnInitializedAsync()
     {
@@ -58,7 +58,7 @@ else
     {
         public DateOnly Date { get; set; }
         public int TemperatureC { get; set; }
-        public string? Summary { get; set; }
+        public string Summary { get; set; }
         public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
     }
 }
