--- a/dyno-gui/Components/Pages/Error.razor
+++ b/dyno-gui/Components/Pages/Error.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Error"
 @using System.Diagnostics
 
-<PageTitle>Error</PageTitle>
+<title>Error</title>
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
@@ -26,9 +26,9 @@
 
 @code{
     [CascadingParameter]
-    private HttpContext? HttpContext { get; set; }
+    private HttpContext HttpContext { get; set; }
 
-    private string? RequestId { get; set; }
+    private string RequestId { get; set; }
     private bool ShowRequestId => !string.IsNullOrEmpty(RequestId);
 
     protected override void OnInitialized() =>
