adjust namespaces and inherit fluxorcomponent

--- a/dyno-gui/Components/Pages/Dyno.razor
+++ b/dyno-gui/Components/Pages/Dyno.razor
@@ -1,5 +1,7 @@
 ﻿@page "/dyno"
+@using Fluxor.Blazor.Web.Components
 @attribute [StreamRendering]
+@inherits FluxorComponent
 
 <title>Dyno</title>
 
