--- a/dyno-gui/Components/Routes.razor
+++ b/dyno-gui/Components/Routes.razor
@@ -1,6 +1,4 @@
-﻿<Fluxor.Blazor.Web.StoreInitializer />
-
-<Router AppAssembly="typeof(Program).Assembly">
+﻿<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
         <FocusOnNavigate RouteData="routeData" Selector="h1" />
