--- a/dyno-wasm/Pages/Dyno.razor
+++ b/dyno-wasm/Pages/Dyno.razor
@@ -8,14 +8,22 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-<MudTable Items="@Measurements" Hover="true">
+<MudTable Items="@Measurements" Hover="true" Loading="@MeasurementState.Value.IsLoading">
     <HeaderContent>
         <MudTh>
             Id
         </MudTh>
+        <MudTh>
+            Datapoints
+        </MudTh>
+        <MudTh>
+            Date recorded
+        </MudTh>
     </HeaderContent>
     <RowTemplate>
         <MudTd DataLabel="Id">@context.Id</MudTd>
+        <MudTd DataLabel="Datapoints count">@context.MeasurementResults.Count</MudTd>
+        <MudTd DataLabel="Date">@context.DateTime</MudTd>
     </RowTemplate>
 </MudTable>
 
