--- a/Src/dyno-wasm/Pages/DynoDetails.razor
+++ b/Src/dyno-wasm/Pages/DynoDetails.razor
@@ -9,9 +9,11 @@
 
 <p>This page shows details of a measurement.</p>
 
-<p>Viewing measurement @Measurement.Id.</p>
+<p>Viewing measurement @Measurement.Id, recorded at @Measurement.DateTime.</p>
 
 @* Visa en liten tabell med info om mätningen. Sedan ett diagram (MudChart.LineChart) med info. Kan även justera viewmodel så att den innehåller mer saker som är lämpliga för en torque-mätning. Aki hej da. *@
+
+<MudChart ChartType="ChartType.Line" ChartSeries="@Series" @bind-SelectedIndex="Index" XAxisLabels="@XAxisLabels" Width="100%" Height="350px" ChartOptions="@Options" />
 
 
 
