add a simple toast

--- a/Src/dyno-wasm/Layout/MainLayout.razor
+++ b/Src/dyno-wasm/Layout/MainLayout.razor
@@ -1,14 +1,4 @@
 ﻿@inherits LayoutComponentBase
-@* Required *@
-<MudThemeProvider />
-<MudPopoverProvider />
-
-@* Needed for dialogs *@
-<MudDialogProvider />
-
-@* Needed for snackbars *@
-<MudSnackbarProvider />
-
 <div class="page">
     <div class="sidebar">
         <NavMenu />
@@ -24,3 +14,14 @@
         </article>
     </main>
 </div>
+<Toast />
+
+@* Required *@
+<MudThemeProvider />
+<MudPopoverProvider />
+
+@* Needed for dialogs *@
+<MudDialogProvider />
+
+@* Needed for snackbars *@
+<MudSnackbarProvider />
