--- a/Src/dyno-wasm/_Imports.razor
+++ b/Src/dyno-wasm/_Imports.razor
@@ -8,4 +8,6 @@
 @using Microsoft.JSInterop
 @using dyno_wasm
 @using dyno_wasm.Layout
+@using dyno_wasm.Components
 @using MudBlazor
+@using Fluxor.Blazor.Web.Components
