--- a/Src/dyno-wasm/Pages/Dyno.razor
+++ b/Src/dyno-wasm/Pages/Dyno.razor
@@ -16,7 +16,7 @@
 <MudTable T="MeasurementModel" Items="@Measurements" Hover="true" Loading="@MeasurementState.Value.IsLoading" OnRowClick="HandleRowClick">
     <HeaderContent>
         <MudTh>
-            Id
+            Name
         </MudTh>
         <MudTh>
             Datapoints
@@ -26,7 +26,7 @@
         </MudTh>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Id">@context.Id</MudTd>
+        <MudTd DataLabel="Id">@context.Name</MudTd>
         <MudTd DataLabel="Datapoints count">@context.MeasurementResults.Count</MudTd>
         <MudTd DataLabel="Date">@context.DateTime</MudTd>
     </RowTemplate>
