--- a/Src/dyno-wasm/Pages/Dyno.razor
+++ b/Src/dyno-wasm/Pages/Dyno.razor
@@ -26,7 +26,7 @@
         </MudTh>
     </HeaderContent>
     <RowTemplate>
-        <MudTd DataLabel="Id">@context.Name</MudTd>
+        <MudTd DataLabel="Name">@context.Name</MudTd>
         <MudTd DataLabel="Datapoints count">@context.MeasurementResults.Count</MudTd>
         <MudTd DataLabel="Date">@context.DateTime</MudTd>
     </RowTemplate>
