--- a/Src/dyno-wasm/Layout/NavMenu.razor
+++ b/Src/dyno-wasm/Layout/NavMenu.razor
@@ -29,16 +29,18 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dyno
             </NavLink>
         </div>
+        @if(!IsLoggedIn)
+        {
+            <div class="nav-item px-3">
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="OnLoginClick">Log in</MudButton>
+            </div>
+        } else
+        {
+            <div class="nav-item px-3">
+                <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="OnLogoutClick">Log out</MudButton>
+            </div>
+        }
     </nav>
 </div>
 
-@code {
-private bool collapseNavMenu = true;
 
-private string NavMenuCssClass => collapseNavMenu ? "collapse" : "nocollapse";
-
-private void ToggleNavMenu()
-{
-    collapseNavMenu = !collapseNavMenu;
-}
-}
