--- a/Src/dyno-wasm/Pages/DynoDetails.razor
+++ b/Src/dyno-wasm/Pages/DynoDetails.razor
@@ -5,12 +5,20 @@
 
 <PageTitle>Dyno details</PageTitle>
 
-<h1>Measurement: @Measurement.Name</h1>
+<h1>Measurement</h1>
 
-<h4>Details</h4>
-<p>@Measurement.Description</p>
+@if(AppState.Value.IsLoggedIn)
+{
+    <h4>Details: @Measurement.Name</h4>
+    <p>@Measurement.Description</p>
 
-<MudChart ChartType="ChartType.Line" ChartSeries="@Series" @bind-SelectedIndex="Index" XAxisLabels="@XAxisLabels" Width="100%" Height="350px" ChartOptions="@Options" />
+    <MudChart ChartType="ChartType.Line" ChartSeries="@Series" @bind-SelectedIndex="Index" XAxisLabels="@XAxisLabels" Width="100%" Height="350px" ChartOptions="@Options" />
+} 
+else
+{
+    <p>You need to logged in to view this page.</p>
+}
+
 
 
 
