Disable stuf when registering unavailable

--- a/Src/dyno-wasm/Pages/Register.razor
+++ b/Src/dyno-wasm/Pages/Register.razor
@@ -7,7 +7,7 @@
 
 <h1>Register user</h1>
 
-Welcome to the registering page.
+<p>On this page you can register a new user to get access to page content.</p>
 
 <MudGrid Class="justify-space-between" Style="max-width: 400px;">
     <MudItem xs="12">
@@ -23,3 +23,7 @@ Welcome to the registering page.
         <MudButton OnClick="HandleRegisterClick" Disabled="@(!AppState.Value.RegisteringEnabled)">Register</MudButton>
     </MudItem>
 </MudGrid>
+@if (!AppState.Value.RegisteringEnabled)
+{
+    <p>Registering is currently disabled. Contact admin for info.</p>
+}
