--- a/Src/dyno-wasm/Layout/NavMenu.razor
+++ b/Src/dyno-wasm/Layout/NavMenu.razor
@@ -29,6 +29,14 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dyno
             </NavLink>
         </div>
+        @if(AppState.Value.RegisteringEnabled)
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="register">
+                    <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Register
+                </NavLink>
+            </div>
+        }
         @if(!IsLoggedIn)
         {
             <div class="nav-item px-3">
