--- a/Src/dyno-wasm/Layout/MainLayout.razor
+++ b/Src/dyno-wasm/Layout/MainLayout.razor
@@ -21,7 +21,7 @@
 </div>
 <Toast />
 
-<MudOverlay @bind-Visible="@AppState.Value.IsLoading" DarkBackground AutoClose="true" />
+<MudOverlay @bind-Visible="AppState.Value.IsLoading" DarkBackground AutoClose="true" />
 
 @* Required *@
 <MudThemeProvider />
