--- a/Src/dyno-wasm/Components/LoginDialog.razor
+++ b/Src/dyno-wasm/Components/LoginDialog.razor
@@ -1,6 +1,6 @@
 ﻿@inherits FluxorComponent
 
-<MudDialog>
+<MudDialog @onkeypress="@OnKeyPress">
     <TitleContent>
         Log in
     </TitleContent>
