--- a/Src/dyno-wasm/Pages/Home.razor
+++ b/Src/dyno-wasm/Pages/Home.razor
@@ -11,7 +11,7 @@
 } else
 {
     <p>Welcome! More will come here hopefully...</p>
-    <p>The code is available <a href="https://github.com/maof14/dyno" target="_blank">here</a> Here development can be tracked and bugs reported etc under <a href="https://github.com/maof14/dyno/issues" target="_blank">issues</a>..</p>
+    <p>The code is available <a href="https://github.com/maof14/dyno" target="_blank">here</a>. Here development can be tracked and bugs reported etc under <a href="https://github.com/maof14/dyno/issues" target="_blank">issues</a>..</p>
     <p>Raspberry pi links:</p>
     <ul>
         <li><a href="http://www.mosaic-industries.com/embedded-systems/microcontroller-projects/raspberry-pi/gpio-pin-electrical-specifications" target="_blank">GPIO specification</a></li>
