--- a/Src/dyno-wasm/Pages/Dyno.razor
+++ b/Src/dyno-wasm/Pages/Dyno.razor
@@ -37,11 +37,15 @@
             <MudTh>
                 Date recorded
             </MudTh>
+            <MudTh>
+                Actions
+            </MudTh>
         </HeaderContent>
         <RowTemplate>
             <MudTd DataLabel="Name">@context.Name</MudTd>
             <MudTd DataLabel="Datapoints count">@context.MeasurementResults.Count</MudTd>
             <MudTd DataLabel="Date">@context.DateTime</MudTd>
+            <MudTd><MudButton StartIcon="@Icons.Material.Filled.DeleteForever" OnClick="() => HandleDeleteClick(context.Id)">Delete</MudButton></MudTd>
         </RowTemplate>
     </MudTable>
 } 
