--- a/Src/dyno-wasm/Pages/Dyno.razor
+++ b/Src/dyno-wasm/Pages/Dyno.razor
@@ -35,6 +35,9 @@
                 Datapoints
             </MudTh>
             <MudTh>
+                Created by
+            </MudTh>
+            <MudTh>
                 Date recorded
             </MudTh>
             <MudTh>
@@ -44,6 +47,7 @@
         <RowTemplate>
             <MudTd DataLabel="Name">@context.Name</MudTd>
             <MudTd DataLabel="Datapoints count">@context.MeasurementResults.Count</MudTd>
+            <MudTd DataLabel="Created by">@context.CreatedBy</MudTd>
             <MudTd DataLabel="Date">@context.DateTime</MudTd>
             <MudTd><MudButton StartIcon="@Icons.Material.Filled.DeleteForever" OnClick="() => HandleDeleteClick(context.Id)">Delete</MudButton></MudTd>
         </RowTemplate>
